<resources>
    <string name="app_name">AvionicZ</string>
    <string name="title_activity_settings">Settings</string>

    <string name="bearing_arrow_content_description">Navigation arrow</string>

    <string name="cant_open_file">Couldn\'t open file!</string>
    <string name="gpx_parser_failed">GPX parser failed!</string>
    <string name="no_waypoints_in_gpx">GPX file doesn\'t contain waypoints.</string>
    <string name="loaded_waypoints">Loaded %d waypoints from GPX file.</string>

    <string name="waypoint_button">Waypoint</string>
    <string name="target_button">Target</string>

    <string name="waypoint_picker_clear_button">Clear</string>
    <string name="waypoints_search_hint">Search</string>

    <string name="decimal_separator">.</string>

    <string name="angle">%d°</string>
    <string name="waypoint_distance">%.3f</string>
    <string name="eta_hours">%dh%dm%ds</string>
    <string name="eta_minutes">%dm%ds</string>
    <string name="eta_seconds">%ds</string>

    <string name="setting_altitude_low_pass_alpha_title">Altitude low-Pass filter ALPHA</string>
    <string name="setting_altitude_low_pass_alpha_summary">Higher filters less. Default is 0.25.</string>

    <string name="setting_vertical_speed_low_pass_alpha_title">Vertical speed low-Pass filter ALPHA</string>
    <string name="setting_vertical_speed_low_pass_alpha_summary">Higher filters less. Default is 0.05.</string>

    <string name="setting_vsi_smoothing_title">Vertical speed smoothing</string>
    <string name="setting_vsi_smoothing_summary">Lower responds faster, higher is more stable. Around 30 usually works well.</string>

    <string name="setting_sea_level_pressure_adjust_sensitivity_title">Sea level pressure adjustment sensitivity</string>
    <string name="setting_sea_level_pressure_adjust_sensitivity_summary">Lower means more range but less accuracy. Default is 130.</string>

    <string name="setting_sea_level_pressure_calibration_title">Sea level pressure calibration</string>
    <string name="setting_sea_level_pressure_calibration_summary">This value is added to the displayed sea level pressure.</string>

    <string name="setting_vertical_speed_color_max_title">Vertical speed color maximum</string>
    <string name="setting_vertical_speed_color_max_summary">When the vertical speed text color will be in its maximum intensity. Default is 100.</string>

    <string name="setting_waypoint_list_font_size_title">Waypoint list font size</string>
    <string name="setting_waypoint_list_font_size_summary">Font size for the item in the waypoint selection list. Default is 40.</string>

    <string name="setting_waypoint_file_title">Waypoints GPX file</string>
    <string name="setting_waypoint_file_summary">A GPX file with navigation markers to be used as waypoints</string>

    <string name="pressure">Pressure</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="standard">Standard</string>

</resources>
